--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,11 @@
             <version>4.13.2</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.14.0</version> <!-- Use the latest version -->
+        </dependency>
 
     </dependencies>
 </project>
